# RGR_cipher

./: CMakeLists.txt  README.md  RSAmain.cpp  Skitala.h  binEncrypted.txt  binEncryptedBekon.txt  ciphers.cpp  ciphers.h  decryptedMessage.txt  decryptedMessageVernam.txt  encryptedMessage.txt  encryptedMessageBekon.txt  encryptedMessageVernam.txt  function.h  functionAfin.cpp  functionAfin.h  functionBekon.cpp  functionBekon.h  functionRSA.cpp  functionSkitala.cpp  functionSkitala.h  functionVernam.cpp  functionVernam.h  inputConsoleMessage.txt  keyDecrypt.txt  keyEncrypt.txt  keyEncryptVernam.txt  main.cpp  mainSkitala.cpp  mainSlitala.cpp  mathFunctions.cpp  messages.txt  openText.txt  readANDwrite.cpp  start.bat  tableKey.txt  tableKeyBekon.txt
RSA/: Header.h  decryptedMessage.txt  encryptedMessage.txt  functionForRSA.cpp  functionRSA.h  main.cpp  openText.txt
src/headers/: ciphers.h  functionRSA.h  functionSkitala.h  functionVernam.h  mathFunctions.h  readANDwrite.h
src/source/: ciphers.cpp  functionAfin.cpp  functionBekon.cpp  functionRSA.cpp  functionSkitala.cpp  functionVernam.cpp  main.cpp  mathFunctions.cpp  readANDwrite.cpp
src/txtFile/: binEncryptedBekon.txt  decryptedMessage.txt  encryptedMessage.txt  inputConsoleMessage.txt  keyDecrypt.txt  keyEncrypt.txt  openText.txt  systemPassword.txt  tableKeyBekon.txt
